Added fire selector